syntax = "proto3";

package service;
option go_package="./pb";

// ==============================================ResourceGroup(资源组)===================================================
message CreateResourceGroupRequest{}
message CreateResourceGroupResponse{}
service ResourceGroup {
  // 创建资源组
  rpc CreateResourceGroup (CreateResourceGroupRequest) returns (CreateResourceGroupResponse);
}

// ==============================================ResourceType(资源类型)==================================================
message CreateResourceTypeRequest{}
message CreateResourceTypeResponse{}
service ResourceType {
  // 创建资源类型
  rpc CreateResourceType (CreateResourceTypeRequest) returns (CreateResourceTypeResponse);
}

// ==============================================ResourceModel(资源模型)=================================================
message CreateResourceModelRequest{}
message CreateResourceModelResponse{}
service ResourceModel {
  // 创建资源模型
  rpc CreateResourceModel (CreateResourceModelRequest) returns (CreateResourceModelResponse);
}

// ==============================================ResourceAttribute(资源属性)=============================================
message CreateResourceAttributeRequest{}
message CreateResourceAttributeResponse{}
service ResourceAttribute {
  // 创建资源属性
  rpc CreateResourceAttribute (CreateResourceAttributeRequest) returns (CreateResourceAttributeResponse);
}

// ==============================================AttributeType(资源属性类型)==============================================
message CreateAttributeTypeRequest{}
message CreateAttributeTypeResponse{}
service AttributeType {
  // 创建资源属性类型
  rpc CreateAttributeType (CreateAttributeTypeRequest) returns (CreateAttributeTypeResponse);
}

// ==============================================Resource(资源)==============================================
message CreateResourceRequest{}
message CreateResourceResponse{}
service Resource {
  // 创建资源
  rpc CreateResource (CreateResourceRequest) returns (CreateResourceResponse);
}

// goctl rpc protoc cmdb.proto --go_out=./pb --go-grpc_out=./pb --zrpc_out=. --style goZero -m